--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,20 @@
     "description": "Adds a button that automatically adds active players to the current roster in an ESPN NBA fantasy league.",
     "version": "1.0",
     "manifest_version": 2,
-    "permissions": ["tabs", "*://games.espn.com/fba/clubhouse/*"],
-
+    "permissions": [
+        "tabs",
+        "declarativeContent",
+        "*://games.espn.com/fba/clubhouse/*"
+    ],
     "icons": {
         "32": "icon-32.png",
         "64": "icon-64.png",
         "128": "icon-128.png"
+    },
+
+    "background": {
+      "scripts": ["background.js"],
+      "persistent": false
     },
     "page_action": {
         "default_title": "ESPN NBA Fantasy Team Auto Setup"
