Attempt to fix problem with content script running when it can't add the auto setup button.

--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,8 @@
     "content_scripts": [
       {
         "matches": ["*://*.games.espn.com/*"],
-        "js": ["autosetup.js"]
+        "js": ["autosetup.js"],
+        "run_at": "document_end"
       }
     ]
   }
