Added option for automatically saving changed lineups.

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
     "permissions": [
         "tabs",
         "declarativeContent",
+        "storage",
         "*://games.espn.com/fba/clubhouse/*"
     ],
     "icons": {
