Moved functions that don't touch the DOM from autosetup.js to new file data.js.

--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
     "content_scripts": [
         {
             "matches": ["*://*.games.espn.com/fba/clubhouse*"],
-            "js": ["autosetup.js"],
+            "js": ["data.js", "autosetup.js"],
             "run_at": "document_end"
         }
     ]
