--- a/manifest.json
+++ b/manifest.json
@@ -37,5 +37,9 @@
             "js": ["data.js", "autosetup.js"],
             "run_at": "document_end"
         }
-    ]
+    ],
+    "options_ui": {
+        "page": "settings.html",
+        "chrome_style": false
+    }
 }
