--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,9 @@
         }
     },
     "background": {
-        "scripts": ["background.js"],
+        "scripts": [
+            "background.js"
+        ],
         "persistent": false
     },
     "page_action": {
@@ -33,8 +35,13 @@
     },
     "content_scripts": [
         {
-            "matches": ["*://*.games.espn.com/fba/clubhouse*"],
-            "js": ["data.js", "autosetup.js"],
+            "matches": [
+                "*://*.games.espn.com/fba/clubhouse*"
+            ],
+            "js": [
+                "data.js",
+                "autosetup.js"
+            ],
             "run_at": "document_end"
         }
     ],
