--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "ESPN NBA Fantasy Team Auto Setup",
-    "description": "Adds a button that automatically adds active players to the current roster in an ESPN NBA fantasy league.",
+    "description": "Automatically add active players to the current roster in an ESPN NBA fantasy league.",
     "version": "2.3.0",
     "manifest_version": 2,
     "permissions": [
