--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "espn-fantasy-autopick",
-    "version": "3.0.4",
-    "description": "An extension that lets you automatically add active players to the current roster in an ESPN NBA/NHL fantasy league.",
+    "version": "3.0.3",
+    "description": "A browser extension that lets you automatically add active players to the current roster in an ESPN NBA/NHL fantasy league.",
     "repository": "https://github.com/magnusbakken/espn-fantasy-autopick.git",
     "author": "Magnus Grindal Bakken <magnusbakken@gmail.com>",
     "license": "MIT",
